<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="extra_topo_id">topo_id</string>
	<string name="extra_img_id">img_id</string>
	<string name="extra_current_topo">current_topo</string>
	
	
	
    <string name="hello">Hello World, TopoguideActivity!</string>
    <string name="app_name">Topoguide-android</string>
    
    <string name="no_topo">Pas de topo</string>
    
	<string name="menu_download">Download new topo</string>
	<string name="menu_delete">Supprimer</string>
    
	<string name="download">Télécharger</string>
	<string name="cancel">Annuler</string>
	
	<string name="tab_info">Infos</string>
	<string name="tab_depart">Depart</string>
	<string name="tab_itinerary">Itineraire</string>
	
	<string name="infos_massif">Massif :</string>
	<string name="infos_secteur">Secteur :</string>
	<string name="infos_orientation">Orientation :</string>
	
	<string name="topo_itineraire_voie">Voie :</string>
	<string name="topo_itineraire_orientation">Orientation :</string>
	<string name="topo_itineraire_difficulte_ski">Ski :</string>
	<string name="topo_itineraire_denivele">Denivele :</string>
	
	<string name="view_download_title">Télécharger un topoguide Skitour</string>
	<string name="id_topo">Id :</string>
	<string name="download_topoId_hint">Identifiant topoguide</string>
	<string name="download_in_progress">"Téléchargement en cours ..."</string>
	<string name="variante_denivele_label">"Dénivelé : "</string>
	<string name="variante_ski_label">"Ski : "</string>
	<string name="variante_orientation_label">"Orientation : "</string>
	<string name="m">m</string>
	<string name="infos_denivele">Dénivelé</string>
	<string name="infos_difficulte_monte">Difficulté de montée</string>
	<string name="infos_difficulte_ski">Difficulté ski</string>
	<string name="infos_nb_jours">Nb de jours</string>
	<string name="infos_type">Type</string>
	<string name="infos_materiel">Matériel</string>
	<string name="infos_pente">Pente</string>
	<string name="infos_exposition">Exposition</string>
	<string name="infos_altitude_depart">Altitude depart</string>
	<string name="infos_depart">Depart</string>

	
</resources>