<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1" >

    <TableRow>
        <TextView
            android:padding="3dip"
            android:text="@string/infos_massif" />

        <TextView android:id="@+id/infos_massif" android:padding="3dip" />
    </TableRow>

    <TableRow>
        <TextView
            android:padding="3dip"
            android:text="@string/infos_secteur" />

        <TextView android:id="@+id/infos_secteur" android:padding="3dip" />
    </TableRow>

    <TableRow>
        <TextView
            android:padding="3dip"
            android:text="@string/infos_orientation" />

        <TextView android:id="@+id/infos_orientation" android:padding="3dip" />
    </TableRow>

</TableLayout>