<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/topo_itineraire_voie" />

    <TextView
        android:id="@+id/topo_itineraire_voie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/topo_itineraire_orientation" />

    <TextView
        android:id="@+id/topo_itineraire_orientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/topo_itineraire_denivele" />

    <TextView
        android:id="@+id/topo_itineraire_denivele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/topo_itineraire_difficulte_ski" />

    <TextView
        android:id="@+id/topo_itineraire_difficulte_ski"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/topo_itineraire_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
</LinearLayout>